# cterminal

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml
crates/cterminal-app/: Cargo.toml  Entitlements.plist  tauri.conf.json
crates/cterminal-app/capabilities/: default.json
crates/cterminal-app/icons/: icon.icns
crates/cterminal-app/src/: events.rs  main.rs
crates/cterminal-app/src/commands/: mod.rs  pty.rs  sessions.rs  workspace.rs
crates/cterminal-core/: Cargo.toml
crates/cterminal-core/src/: lib.rs
crates/cterminal-core/src/claude/: mod.rs
crates/cterminal-core/src/config/: mod.rs
crates/cterminal-core/src/image/: mod.rs
crates/cterminal-core/src/pty/: mod.rs  platform.rs
crates/cterminal-core/src/session/: history.rs  mod.rs
crates/cterminal-core/src/shell/: mod.rs
crates/cterminal-core/src/watcher/: mod.rs
